--- a/config.toml
+++ b/config.toml
@@ -4,3 +4,6 @@ backgroundColor = "#F0F2F6"  # צבע רקע לאפליקציה
 secondaryBackgroundColor = "#FFFFFF"  # צבע רקע משני לאזורים פנימיים
 textColor = "#000000"  # צבע הטקסט הכללי
 font = "sans serif"  # פונטים פשוטים ונקיים
+
+ [layout]
+wide = true
