--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 [theme]
 primaryColor = "#1E90FF"  # צבע עיקרי לכפתורים ורכיבים חשובים
 backgroundColor = "#F0F2F6"  # צבע רקע לאפליקציה
-secondaryBackgroundColor = "#FFFF66"  # צבע רקע משני לאזורים פנימיים
+secondaryBackgroundColor = "#FFF77F66"  # צבע רקע משני לאזורים פנימיים
 textColor = "#000000"  # צבע הטקסט הכללי
 font = "sans serif"  # פונטים פשוטים ונקיים
 
