--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = "#1E90FF"  # צבע עיקרי לכפתורים ורכיבים חשובים
+primaryColor = "#1E90F5"  # צבע עיקרי לכפתורים ורכיבים חשובים
 backgroundColor = "#F0F2F6"  # צבע רקע לאפליקציה
 secondaryBackgroundColor = "#FFF77F66"  # צבע רקע משני לאזורים פנימיים
 textColor = "#000000"  # צבע הטקסט הכללי
