--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = "#1E90FF"
+primaryColor = "#5D7599"
 backgroundColor = "#F0F2F6"
 secondaryBackgroundColor = "#FFFFFF"
 textColor = "#000000"
