--- a/config.toml
+++ b/config.toml
@@ -2,8 +2,8 @@
 primaryColor = "#1E90F5"  # צבע עיקרי לכפתורים ורכיבים חשובים
 backgroundColor = "#F0F2F6"  # צבע רקע לאפליקציה
 secondaryBackgroundColor = "#FFF77F66"  # צבע רקע משני לאזורים פנימיים
-textColor = "#000000"  # צבע הטקסט הכללי
-font = "sans serif"  # פונטים פשוטים ונקיים
+textColor = "#333333"  # צבע הטקסט הכללי
+font = "Calibri"  # פונטים פשוטים ונקיים
 
  [layout]
 wide = true
