--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,7 +3,7 @@ primaryColor = "#5D7599"
 backgroundColor = "#F0F2F6"
 secondaryBackgroundColor = "#FFFFFF"
 textColor = "#333333"
-font = "Calibri"
+font = "Alasassy Caps"
 
 [layout]
 wide = true
